k8s/node-app-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: dev
spec:
  selector:
    app: node-app
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: us.icr.io/durrani/node-app:1.0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: icr-secret
