k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress-dev
  namespace: dev
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=node-app-service rewrite=/"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: a145619a-us-south.lb.appdomain.cloud
      http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress-prod
  namespace: prod
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=node-app-service rewrite=/"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: a145619a-us-south.lb.appdomain.cloud
      http:
        paths:
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
