k8s/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: dev
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=jenkins rewrite=/"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: a145619a-us-south.lb.appdomain.cloud
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
